--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                         <img class="h-16 opacity-70 dark:opacity-60" src="insititue logo.jpg" alt="Institute Logo">
                     </div>
                     <div class="flex justify-center">
-                        <img class="h-1className opacity-70 dark:opacity-60" src="academy logo.jpg" alt="Academy Logo">
+                        <img class="h-16 opacity-70 dark:opacity-60" src="academy logo.jpg" alt="Academy Logo">
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transition transform duration-300 hover:scale-105">
-                        <img src="httpsG://placehold.co/400x250/1DA1F2/white?text=Coaching+Institutes&font=inter" alt="Coaching Institutes" class="w-full h-48 object-cover">
+                        <img src="https://placehold.co/400x250/1DA1F2/white?text=Coaching+Institutes&font=inter" alt="Coaching Institutes" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-2xl font-bold text-theme-text dark:text-white">For Coaching Institutes</h3>
                             <p class="mt-2 text-theme-text-light dark:text-gray-400">
