--- a/templates/index.html
+++ b/templates/index.html
@@ -90,9 +90,9 @@
                         </p>
                         <div class="mt-8 flex flex-col sm:flex-row justify-center md:justify-start space-y-4 sm:space-y-0 sm:space-x-4">
                             
-                            <a href="{{ url_for('teacher_page') }}" class="inline-block px-8 py-3 text-base font-medium text-white bg-theme-purple rounded-lg shadow-md hover:bg-opacity-90 transform transition duration-200 hover:scale-105">
-                                Request a Demo
-                            </a>
+                            <a href="{{ url_for('teacher_page') }}" class="inline-block px-8 py-3 text-base font-medium text-theme-purple bg-theme-purple-light rounded-lg hover:bg-opacity-70 transform transition duration-200 hover:scale-105 
+    dark:text-theme-purple dark:bg-transparent dark:border dark:border-theme-purple dark:hover:bg-theme-purple/20">
+                                Request a Demo                             </a>
                             
                             <a href="#" class="inline-block px-8 py-3 text-base font-medium text-theme-purple bg-theme-purple-light rounded-lg hover:bg-opacity-70 transform transition duration-200 hover:scale-105 
                                 dark:text-theme-purple dark:bg-transparent dark:border dark:border-theme-purple dark:hover:bg-theme-purple/20">
