--- a/templates/login.html
+++ b/templates/login.html
@@ -287,7 +287,7 @@
       <a href="{{ url_for('index') }}" class="logo" aria-label="AttendanceSys Home">FaceCard</a>
       <ul class="nav-links" role="menubar">
         <li role="none"><a href="{{ url_for('index') }}" role="menuitem" tabindex="0">Home</a></li>
-        <li role="none"><a href="{{ url_for('register_page') }}" role="menuitem" tabindex="0" class="btn">Register</a></li>
+        <li role="none"><a href="{{ url_for('demo_dashboard') }}" role="menuitem" tabindex="0" class="btn">Dashboard</a></li>
       </ul>
     </nav>
   </header>
